crates/models/src/validation/tests/snapshots/models__validation__tests__redundant_source_schema_and_shuffle.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: source schema test://int-string.schema is already the schema of testing/int-string and should be omitted here,
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: transform reverseIntString shuffle key is already the key of testing/int-string and should be omitted here,
    },
]
