crates/models/src/validation/tests/snapshots/models__validation__tests__schema_fragment_not_found.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: referenced schema fragment location test://int-string-len.schema#/not/found does not exist,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string,
        error: referenced schema fragment location test://int-string.schema#/not/found does not exist,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string,
        error: location /int is unknown in schema test://int-string.schema#/not/found,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/Int,
        error: location /int is unknown in schema test://int-string.schema#/not/found,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/bit,
        error: location /bit is unknown in schema test://int-string.schema#/not/found,
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: location /int is unknown in schema test://int-string.schema#/not/found,
    },
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: location /len is unknown in schema test://int-string-len.schema#/not/found,
    },
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: location /int is unknown in schema test://int-string-len.schema#/not/found,
    },
]
