crates/models/src/validation/tests/snapshots/models__validation__tests__shape_inspections.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-len.schema,
        error: '/int' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://int-string-len.schema,
        error: /int has 'set' reduction strategy, restricted to objects, but has types "integer",
    },
    Error {
        scope: test://int-string-len.schema,
        error: '/str' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://int-string-len.schema,
        error: /str has 'sum' reduction strategy, restricted to numbers, but has types "string",
    },
]
