crates/models/src/validation/tests/snapshots/models__validation__tests__shuffle_key_length_mismatch.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: transform halveIntString shuffled key types ["integer"] don't align with transform halveSelf types ["integer", "integer"],
    },
]
