crates/models/src/validation/tests/snapshots/models__validation__tests__test_step_ingest_schema_error.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: test ingest document is invalid against the collection schema: {
          "document": {
            "bit": true,
            "int": 42,
            "str_whoops": "string A"
          },
          "basic_output": {
            "errors": [
              {
                "absoluteKeywordLocation": "test://int-string.schema",
                "error": "Invalid(Required { props: [\"int\", \"str\", \"bit\"], props_interned: 7 })",
                "instanceLocation": "",
                "keywordLocation": "#"
              }
            ],
            "valid": false
          }
        },
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: test ingest document is invalid against the collection schema: {
          "document": {
            "bit": true,
            "int": 52,
            "str_whoops": "string B"
          },
          "basic_output": {
            "errors": [
              {
                "absoluteKeywordLocation": "test://int-string.schema",
                "error": "Invalid(Required { props: [\"int\", \"str\", \"bit\"], props_interned: 7 })",
                "instanceLocation": "",
                "keywordLocation": "#"
              }
            ],
            "valid": false
          }
        },
    },
]
