crates/models/src/validation/tests/snapshots/models__validation__tests__test_step_verify_key_order.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: documents to verify are not in collection key order,
    },
]
