crates/models/src/validation/tests/snapshots/models__validation__tests__test_step_verify_selector.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: include projection Int of collection testing/int-string is not a partition,
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: include partition selector field Int value true is incompatible with the projections type, "integer",
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: include projection Unknown does not exist in collection testing/int-string,
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: include partition selector field bit value 42 is incompatible with the projections type, "boolean",
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: include partition selector field bit value "" is incompatible with the projections type, "boolean",
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: include partition selector field bit cannot be an empty string,
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: exclude projection AlsoUnknown does not exist in collection testing/int-string,
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: exclude projection Int of collection testing/int-string is not a partition,
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: exclude partition selector field Int value false is incompatible with the projections type, "integer",
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: exclude partition selector field Int value "" is incompatible with the projections type, "integer",
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: exclude partition selector field Int cannot be an empty string,
    },
    Error {
        scope: test://int-string-tests#/tests/A%20Test/0,
        error: exclude partition selector field bit value "a string" is incompatible with the projections type, "boolean",
    },
]
